--- a/Resources/Public/Stylesheets/Partials/Menu.less
+++ b/Resources/Public/Stylesheets/Partials/Menu.less
@@ -21,4 +21,7 @@ div.project-buttons {
 		line-height: 40px;
 		height: 40px;
 	}
+	.row {
+		width: 100%;
+	}
 }
